--- a/sytle.css
+++ b/sytle.css
@@ -13,7 +13,7 @@ body{
 }
 
 img{
-    size: 100%;
+    max-width: 100%;
     display: block;
 }
 
@@ -69,10 +69,11 @@ img{
 .stickAndText{
     border-left: 12px solid #F16D7F;
     padding-left: 16px;
-    min-width: 400px;
+    max-width: 410px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 5px;
+    justify-content: flex-start;
 }
 
 .stickAndText h1{
@@ -193,6 +194,7 @@ img{
 }
 
 .productBlock{
+    background: #F8F8F8;
     max-width: 360px;
     max-height: 581px;
 }
@@ -282,7 +284,7 @@ img{
     }
 
     .stickAndText{
-        min-width: 310px;
+        max-width: 310px;
     }
 
     .stickAndText h1{
